# deno-core-vm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  code_export.mjs  debug.ts  errrors.txt  index.d.ts  index.js  index.js.map  index.ts  jest.config.js  package-lock.json  package.json  stream-performance-todo.md  tsconfig.idx.json  tsconfig.json
bench/: bandwidth.ts  parallel_workers.ts  run.mjs
codex/: jest-output.txt
examples/: 02-eval-module.ts  03-globals.ts  05-imports-callback.ts  06-https-imports.ts  07-node-resolve.ts  13-serverless-style.ts  14-custom-loaders.ts  README.md
ipc-bench/: package.json
ipc-bench/src/: bench.ts  runtime-bench-bun.ts  runtime-bench-deno.ts
ray-bench/: README.md  args.md  package.json  spec.md
ray-bench/src/: bench.ts  format.ts  runtime-bench-bun.ts  runtime-bench-deno.ts  scenarios.ts  types.ts
scripts/: code_export.mjs  ipc-bench-sweep.sh  ts-compiled-js-size.mjs
src/: deno_thread.rs  index.ts  lib.rs  log.rs
src/bridge/: errors.rs  mod.rs  neon_codec.rs  promise.rs  types.rs  v8_codec.rs  wire.rs
src/native_api/: worker_api.rs
src/shared/: stream-envelope.ts
src/ts/: director.ts  module-namespace.ts  module-source.ts  options.ts  template.ts  types.ts  wire.ts  worker.ts
src/worker/: bootstrap.js  dispatch.rs  env.rs  env_flags.rs  eval.rs  filesystem.rs  messages.rs  mod.rs  modules.rs  op_reply.rs  ops.rs  runtime.js  runtime.rs  (+2 more)
test/: api.spec.ts  data.spec.ts  eval.spec.ts  globals.spec.ts  limits.spec.ts  messages.spec.ts  modules.spec.ts  promises.spec.ts  serialization.spec.ts  stress.spec.ts
test-ts/: api.spec.ts  bridge.isolation.spec.ts  bridge.types.spec.ts  console.spec.ts  contention.spec.ts  data.spec.ts  eval.module.spec.ts  eval.spec.ts  events.off.spec.ts  globals.spec.ts  handles.spec.ts  helpers.assertions.ts  helpers.time.ts  imports.edge.spec.ts  imports.spec.ts  imports.ts_compile.spec.ts  inspect_env.spec.ts  lifecycle.template.spec.ts  limits.spec.ts  memory.spec.ts  messages.spec.ts  module_loader.remote.spec.ts  modules.spec.ts  node_compat_resolve.spec.ts  options.merge.spec.ts  promises.spec.ts  runtime.events.spec.ts  serialization.spec.ts  streams.edge.spec.ts  stress.spec.ts
test-ts-back/: api.spec.ts  modules.spec.ts  promises.spec.ts  stress.spec.ts
(+4 files in other folders)
