[package]
name = "deno-core-vm"
version = "0.2.0"
description = "Run a Deno core worker from NodeJS"
authors = ["me@scottlott.com"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
neon = { version = "1.1.1", features = ["futures"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
cpu-time = "1.0.0"
deno_core = "0.385.0"
deno_runtime = "0.240.0"
deno_error = "=0.7.1"
serde = "1.0.228"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
