[package]
name = "deno-core-vm"
version = "0.2.0"
description = "Run a Deno core worker from NodeJS"
authors = ["me@scottlott.com"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
neon = { version = "1.1.1", features = ["futures"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
cpu-time = "1.0.0"

# still referenced directly in your crate; ok to keep for now
deno_core = "=0.386.0"

deno_runtime = { version = "=0.242.0", features = ["transpile", "snapshot", "only_snapshotted_js_sources", "include_js_files_for_snapshotting"] }
deno_node = { version="=0.172.0", features = ["sync_fs"]  }

deno_error = "=0.7.1"
serde = "1.0.228"
urlencoding = "2.1.3"


deno_fs = { version="=0.144.0", features = ["sync_fs"]  }
deno_resolver = { version="=0.65.0", features = ["sync"]  }
sys_traits = { version="=0.1.24"  }
deno_snapshots = "=0.49.0"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
